--- a/app/src/main/res/layout/fragment_receipt_resume.xml
+++ b/app/src/main/res/layout/fragment_receipt_resume.xml
@@ -14,7 +14,7 @@
         <android.support.v7.widget.CardView
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            android:layout_weight="4"
+            android:layout_weight="4.5"
             app:cardBackgroundColor="@color/colorPrimary">
 
             <LinearLayout
@@ -125,10 +125,9 @@
                     android:layout_height="wrap_content"
                     android:orientation="horizontal">
                     <TextView
-                        android:layout_width="0dp"
+                        android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="Cliente: "
-                        android:layout_weight="0.3"
                         android:textColor="@color/white"
                         android:textStyle="bold"
                         android:textSize="18sp"/>
@@ -140,17 +139,10 @@
                         android:layout_weight="1"
                         android:textColor="@color/white"
                         android:textSize="18sp"/>
-            </LinearLayout>
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:orientation="horizontal">
 
                     <TextView
-                        android:layout_width="0dp"
+                        android:layout_width="wrap_content"
                         android:layout_height="match_parent"
-                        android:layout_weight="0.3"
                         android:text="Cedula: "
                         android:textColor="@color/white"
                         android:textStyle="bold"
@@ -163,7 +155,8 @@
                         android:layout_weight="1"
                         android:textColor="@color/white"
                         android:textSize="18sp"/>
-                </LinearLayout>
+            </LinearLayout>
+
 
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -210,6 +203,45 @@
                         android:textSize="18sp"/>
                 </LinearLayout>
 
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal"
+                    android:layout_marginTop="20dp"
+                    android:gravity="center">
+
+                    <android.support.v7.widget.CardView
+                        android:layout_width="150dp"
+                        android:layout_height="50dp"
+                        android:id="@+id/cvDetails"
+                        app:cardBackgroundColor="@color/white">
+                        <TextView
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+                            android:text="Detalle"
+                            android:gravity="center"
+                            android:textStyle="bold"
+                            android:layout_marginRight="10dp"
+                            android:textColor="@color/colorPrimary"/>
+                    </android.support.v7.widget.CardView>
+
+                    <android.support.v7.widget.CardView
+                        android:layout_width="150dp"
+                        android:layout_height="50dp"
+                        android:layout_marginLeft="10dp"
+                        android:id="@+id/cvPayments"
+                        app:cardBackgroundColor="@color/gray_200">
+
+                        <TextView
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+                            android:text="Pagos"
+                            android:gravity="center"
+                            android:textStyle="bold"/>
+
+                    </android.support.v7.widget.CardView>
+                </LinearLayout>
             </LinearLayout>
         </android.support.v7.widget.CardView>
 
@@ -218,10 +250,17 @@
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_weight="7">
+
             <android.support.v7.widget.RecyclerView
                 android:id="@+id/rvList"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"/>
+
+            <android.support.v7.widget.RecyclerView
+                android:id="@+id/rvListPayment"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:visibility="gone"/>
 
             <ProgressBar android:id="@+id/pb"
                 android:layout_width="80dp"
@@ -241,7 +280,7 @@
                 android:layout_height="match_parent"
                 android:orientation="vertical">
 
-                <LinearLayout
+                <LinearLayout android:id="@+id/llTotal"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:orientation="horizontal"
@@ -258,6 +297,34 @@
                         android:textStyle="bold"/>
 
                     <TextView android:id="@+id/tvTotal"
+                        android:layout_width="wrap_content"
+                        android:layout_height="match_parent"
+                        android:text=""
+                        android:gravity="center|right"
+                        android:textSize="30sp"
+                        android:textColor="@color/white"
+                        android:textStyle="bold"/>
+
+                </LinearLayout>
+
+                <LinearLayout android:id="@+id/llTotalPayment"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:orientation="horizontal"
+                    android:paddingRight="20dp"
+                    android:visibility="gone">
+
+                    <TextView
+                        android:layout_width="0dp"
+                        android:layout_height="match_parent"
+                        android:text="Total Pagado: "
+                        android:gravity="center|right"
+                        android:layout_weight="1"
+                        android:textSize="25sp"
+                        android:textColor="@color/white"
+                        android:textStyle="bold"/>
+
+                    <TextView android:id="@+id/tvTotalPayment"
                         android:layout_width="wrap_content"
                         android:layout_height="match_parent"
                         android:text=""
