--- a/app/src/main/res/layout/dialog_add_edit_users.xml
+++ b/app/src/main/res/layout/dialog_add_edit_users.xml
@@ -52,6 +52,7 @@
             android:orientation="vertical"
             android:padding="50dp">
 
+            <!--
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -70,7 +71,7 @@
                     android:layout_height="wrap_content"
                     android:layout_weight="3"/>
 
-            </LinearLayout>
+            </LinearLayout>-->
 
             <android.support.design.widget.TextInputLayout
                 android:layout_width="match_parent"
