--- a/app/src/main/res/layout/fragment_admin_license_setup.xml
+++ b/app/src/main/res/layout/fragment_admin_license_setup.xml
@@ -194,6 +194,43 @@
                     android:textStyle="bold"/>
 
             </LinearLayout>
+
+
+
+<!--
+                <LinearLayout android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1"
+                    android:gravity="center"
+                    android:orientation="vertical">
+
+                    <android.support.v7.widget.CardView
+                        android:layout_width="120dp"
+                        android:layout_height="120dp"
+                        app:cardBackgroundColor="@color/colorPrimary"
+                        app:cardCornerRadius="60dp">
+
+                        <ImageView android:id="@+id/btnControls"
+                            android:layout_width="80dp"
+                            android:layout_height="80dp"
+                            android:src="@drawable/ic_control"
+                            android:background="?attr/selectableItemBackgroundBorderless"
+                            android:tint="@color/white"
+                            android:layout_gravity="center"/>
+
+                    </android.support.v7.widget.CardView>
+
+
+                    <TextView
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="Controles"
+                        android:gravity="center"
+                        android:textStyle="bold"/>
+
+                </LinearLayout>
+-->
+
             </TableRow>
 
 
