--- a/app/src/main/res/layout/dialog_add_edit_product.xml
+++ b/app/src/main/res/layout/dialog_add_edit_product.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
 
         <LinearLayout
@@ -12,7 +13,8 @@
             <LinearLayout android:id="@+id/llMainScreen"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:orientation="vertical">
+                android:orientation="vertical"
+                android:visibility="visible">
 
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -64,16 +66,7 @@
                             android:layout_height="wrap_content" />
                     </android.support.design.widget.TextInputLayout>
 
-                    <android.support.design.widget.TextInputLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:hint="Name"
-                        android:layout_marginTop="10dp">
-                        <android.support.design.widget.TextInputEditText
-                            android:id="@+id/etName"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content" />
-                    </android.support.design.widget.TextInputLayout>
+
 
 
                     <LinearLayout android:id="@+id/llTipo"
@@ -115,6 +108,20 @@
                             android:layout_weight="3"/>
 
                     </LinearLayout>
+
+
+
+                    <android.support.design.widget.TextInputLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:hint="Name"
+                        android:layout_marginTop="10dp">
+                        <android.support.design.widget.TextInputEditText
+                            android:id="@+id/etName"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content" />
+                    </android.support.design.widget.TextInputLayout>
+
 
                 </LinearLayout>
 
@@ -204,13 +211,116 @@
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:orientation="vertical"
-                    android:background="@android:color/darker_gray">
+                    android:orientation="vertical">
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:orientation="vertical"
+                        android:paddingTop="30dp"
+                        android:paddingLeft="10dp"
+                        android:paddingRight="10dp"
+                        android:paddingBottom="20dp">
+
+                        <TextView android:id="@+id/tvMeasureName"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:textStyle="bold"
+                            android:text=""/>
+
+                        <LinearLayout
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:orientation="horizontal">
+
+                            <CheckBox android:id="@+id/cbActiveMeasure"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:text="Activo"
+                                android:layout_gravity="center_vertical"/>
+
+
+                            <android.support.design.widget.TextInputLayout
+                                android:layout_width="200dp"
+                                android:layout_height="wrap_content"
+                                android:hint="Precio"
+                                android:layout_marginLeft="10dp">
+                                <android.support.design.widget.TextInputEditText
+                                    android:id="@+id/etMeasurePrice"
+                                    android:layout_width="match_parent"
+                                    android:layout_height="wrap_content"
+                                    android:inputType="numberDecimal"/>
+                            </android.support.design.widget.TextInputLayout>
+                        </LinearLayout>
+
+
+                        <LinearLayout
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:orientation="horizontal">
+
+                            <CheckBox android:id="@+id/cbActiveRange"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:text="Rango "
+                                android:layout_gravity="center_vertical"/>
+
+
+                            <android.support.design.widget.TextInputLayout
+                                android:layout_width="200dp"
+                                android:layout_height="wrap_content"
+                                android:hint="Min"
+                                android:layout_marginLeft="10dp">
+                                <android.support.design.widget.TextInputEditText
+                                    android:id="@+id/etMin"
+                                    android:layout_width="match_parent"
+                                    android:layout_height="wrap_content"
+                                    android:inputType="numberDecimal"/>
+                            </android.support.design.widget.TextInputLayout>
+
+
+                            <android.support.design.widget.TextInputLayout
+                                android:layout_width="200dp"
+                                android:layout_height="wrap_content"
+                                android:hint="Max"
+                                android:layout_marginLeft="20dp">
+                                <android.support.design.widget.TextInputEditText
+                                    android:id="@+id/etMax"
+                                    android:layout_width="match_parent"
+                                    android:layout_height="wrap_content"
+                                    android:inputType="numberDecimal"/>
+                            </android.support.design.widget.TextInputLayout>
+
+
+                        </LinearLayout>
+                        <android.support.v7.widget.CardView
+                            android:layout_width="100dp"
+                            android:layout_height="50dp"
+                            android:layout_gravity="center"
+                            app:cardCornerRadius="25dp"
+                            app:cardBackgroundColor="@color/colorPrimary"
+                            android:id="@+id/btnApply"
+                            android:layout_marginTop="10dp">
+
+                            <TextView
+                                android:layout_width="match_parent"
+                                android:layout_height="match_parent"
+                                android:text="Aplicar"
+                                android:gravity="center"
+                                android:textStyle="bold"
+                                android:textColor="@color/white"/>
+
+                        </android.support.v7.widget.CardView>
+
+
+
+                    </LinearLayout>
 
                     <android.support.v7.widget.RecyclerView
                         android:id="@+id/rvMeasures"
                         android:layout_width="match_parent"
-                        android:layout_height="match_parent"/>
+                        android:layout_height="match_parent"
+                        android:background="@android:color/darker_gray"/>
                 </LinearLayout>
             </LinearLayout>
 
